# hello-webserver

./: README.md
database/: test.db
database/go/: server.go
database/haskell-wai/: haskell.cabal  stack.yaml
database/haskell-wai/src/: Main.hs
database/rust-actix/: Cargo.toml
database/rust-actix/src/: main.rs
database/rust-tide/: Cargo.toml
database/rust-tide/src/: main.rs
go/: server.go
haskell/src/: Main.hs
hello-world/go-gin/: server.go
hello-world/haskell/: stack.yaml
hello-world/haskell-servant/: haskell.cabal
hello-world/haskell-servant/src/: Main.hs
hello-world/haskell-wai/: haskell.cabal
hello-world/haskell-yesod/: haskell-yesod.cabal
hello-world/haskell-yesod/src/: Main.hs
hello-world/rust-actix/: Cargo.toml
hello-world/rust-actix/src/: main.rs
hello-world/rust-tide/: Cargo.toml
hello-world/rust-tide/src/: main.rs
hello-world/rust-warp/: Cargo.toml
hello-world/rust-warp/src/: main.rs
rust/: Cargo.toml
rust/src/: main.rs
simple-json/: test.json
simple-json/go/: server.go
simple-json/go-gin/: server.go
simple-json/haskell-servant/: haskell.cabal
simple-json/haskell-servant/src/: Main.hs
simple-json/haskell-wai/: haskell.cabal  stack.yaml
simple-json/haskell-wai/src/: Main.hs
simple-json/haskell-yesod/: haskell-yesod.cabal
simple-json/haskell-yesod/src/: Main.hs
simple-json/rust-actix/: Cargo.toml
simple-json/rust-actix/src/: main.rs
simple-json/rust-hyper/: Cargo.toml
simple-json/rust-hyper/src/: main.rs
simple-json/rust-tide/: Cargo.toml
simple-json/rust-tide/src/: main.rs
simple-json/rust-warp/: Cargo.toml
simple-json/rust-warp/src/: main.rs
