cabal-version: 2.2
name:          haskell
version:       1.0.0
description:   Simple JSON web server in Haskell.
homepage:      https://github.com/fosskers/hello-webserver
author:        Colin Woodbury
maintainer:    colin@fosskers.ca
copyright:     2020 Colin Woodbury
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

executable database
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:
    , aeson
    , base           >=4.7  && <5
    , http-types     ^>=0.12
    , sqlite-simple  ^>=0.4
    , text
    , time
    , wai            ^>=3.2
    , warp           ^>=3.3
