[package]
name = "rust-actix"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
actix-web = "3.0.0-beta.3"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2_sqlite = "0.16"
rusqlite = { version = "0.23", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
