[package]
name = "rust-tide"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8"
r2d2_sqlite = "0.16"
rusqlite = { version = "0.23", features = ["chrono"] }
tide = "0.13"

[profile.release]
lto = true
