cabal-version: 2.2
name:          haskell
version:       1.0.0
description:   Simple JSON web server in Haskell.
homepage:      https://github.com/fosskers/hello-webserver
author:        Colin Woodbury
maintainer:    colin@fosskers.ca
copyright:     2020 Colin Woodbury
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

executable json-server
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:
    , aeson
    , base            >=4.7  && <5
    , servant         ^>=0.16
    , servant-server  ^>=0.16
    , text
    , time
    , warp            ^>=3.3
