cabal-version: 2.2
name:          haskell-yesod
version:       0.1.0.0
description:   Yesod example
homepage:      https://github.com/fosskers/hello-webserver
author:        Colin Woodbury
maintainer:    colin@fosskers.ca
copyright:     2020 Colin Woodbury
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

executable yesod-server
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
    -funclutter-valid-hole-fits

  build-depends:
    , aeson       ^>=1.4
    , base        >=4.7  && <5
    , http-types  ^>=0.12
    , text
    , time
    , yesod       ^>=1.6
