[package]
name = "rust"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }  # 2864 -> 1696
# tokio = { version = "0.2", features = ["full"] }  # 3.0 -> 1.8

[profile.release]
lto = true
