[package]
name = "rust-tide"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tide = "0.13"

[profile.release]
lto = true
